# website

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  fink.tmLanguage.json
.github/workflows/: ci.yml
content/: 404.md  index.md  playground.md
content/docs/: index.md
content/docs/contributing/: index.md
content/docs/debugging/: index.md
content/docs/execution-model/: index.md
content/docs/guides/: index.md
content/docs/language/: index.md
content/docs/roadmap/: index.md
playground/: build.mjs  index.html  package-lock.json  package.json
playground/lib/: fink.tmLanguage.json  fink_wasm.d.ts  fink_wasm.js  fink_wasm_bg.wasm
playground/src/: compiler.ts  hello-world.wat  main.ts  path-stub.js  wasi-shim.ts
src/: highlight.rs  main.rs  markdown.rs  playground.rs  serve.rs  svg.rs
static/: CNAME  robots.txt  style.css  syntax-colors.css
templates/: 404.html  base.html  docs.html  home.html  page.html  playground.html
